Kubernetes/GatewayAPI/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-testing
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /test
    backendRefs:
    - name: httpbin
      kind: Service
      port: 80
      weight: 75
    - name: echo
      kind: Service
      port: 8080
      weight: 25
